# python-setup

./: pyproject.toml
.github/workflows/: ci.yaml
src/python_setup/: __init__.py
