[project]
name = "python-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Philip Solarz", email = "philipsolarz@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
python-setup = "python_setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]
